--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-APScheduler==3.2.0
-werkzeug==0.11.15
-Flask==0.12
-requests==2.12.4
-lxml==3.7.2
-
-pymongo
-redis
-
-
+APScheduler==3.5.3
+werkzeug==0.14.1
+Flask==1.0.2
+requests==2.19.1
+lxml==4.2.4
+redis-py-cluster==1.3.5
+pymongo==3.7.1
+redis==2.10.6
